--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name" : "ejdb",
-    "version" : "1.1.25",
+    "version" : "1.1.26",
     "config" : {
         "windownloadurl_ia32" : "http://dl.dropboxusercontent.com/u/4709222/ejdb/tcejdb-1.1.25-mingw32-i686.zip",
         "windownloadurl_x64" : "http://dl.dropboxusercontent.com/u/4709222/ejdb/tcejdb-1.1.25-mingw32-x86_64.zip"
@@ -34,10 +34,11 @@
         "node" : "0.8.x || 0.10.x"
     },
     "dependencies" : {
+    	"adm-zip" : "0.4.4",
         "nodeunit" : ">=0.7.0"
     },
     "scripts" : {
-        "preinstall" : "node platform.js preinstall",
+        "preinstall" : "npm install adm-zip@0.4.4 && node platform.js preinstall",
         "test" : "node platform.js test"
     },
     "bin" : {
