--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
     "name" : "ejdb",
     "version" : "1.1.28",
     "config" : {
-        "windownloadurl_ia32" : "https://dl.dropboxusercontent.com/u/4709222/ejdb/tcejdb-1.1.25-mingw32-i686.zip",
-        "windownloadurl_x64" : "https://dl.dropboxusercontent.com/u/4709222/ejdb/tcejdb-1.1.25-mingw32-x86_64.zip"
+        "windownloadurl_ia32" : "http://wish.cto.fi/ejdb/tcejdb-1.1.25-mingw32-i686.zip",
+        "windownloadurl_x64" : "http://wish.cto.fi/ejdb/tcejdb-1.1.25-mingw32-x86_64.zip"
     },
     "main" : "ejdb.js",
     "homepage" : "http://ejdb.org",
